--- a/src/scss/components/_sort.scss
+++ b/src/scss/components/_sort.scss
@@ -1,4 +1,4 @@
-@import 'variables';
+@import '../variables';
 
 .sort {
   position: relative;
@@ -30,7 +30,6 @@
     border-radius: 10px;
     overflow: hidden;
     padding: 10px 0;
-    width: 160px;
 
     ul {
       overflow: hidden;
