--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -41,7 +41,8 @@
     height: 32px;
     min-width: 32px;
     padding: 0;
-    border-width: 2px;
+    border-width: 1px;
+    border-radius: 16px;
   }
 
   &--black {
